cmake_minimum_required(VERSION 3.16.3)
project(chapter3)

add_subdirectory(TCPdemo)
add_subdirectory(select)
add_subdirectory(block-send)
add_subdirectory(no-block-send)
add_subdirectory(block-recv)
add_subdirectory(no-block-recv)
add_subdirectory(zero-send-recv)
add_subdirectory(no-block-connect)
add_subdirectory(linux_ioctl)
add_subdirectory(poll_server)
add_subdirectory(epoll)
add_subdirectory(getip)